@@ -18,7 +18,7 @@
 --%>
 
 <c:if test="${!empty categoryName}">
-	<c:if test="${!empty subCategories}">
+	<c:if test="${numSubCategories > 0}">
 <h3><f:message key="topic.category.subcategories"><f:param value="${categoryName}" /></f:message></h3>
 <p><f:message key="topic.category.numsubcategories"><f:param value="${numSubCategories}" /><f:param value="${categoryName}" /></f:message></p>
 
@@ -38,7 +38,7 @@
 </td></tr></table>
 	</c:if>
 
-	<c:if test="${!empty categoryImages}">
+	<c:if test="${numCategoryImages > 0}">
 <h3><f:message key="topic.category.images"><f:param value="${categoryName}" /></f:message></h3>
 <p><f:message key="topic.category.numimages"><f:param value="${numCategoryImages}" /><f:param value="${categoryName}" /></f:message></p>
 
@@ -58,7 +58,7 @@
 
 <h3><f:message key="topic.category.topics"><f:param value="${categoryName}" /></f:message></h3>
 <p><f:message key="topic.category.numtopics"><f:param value="${numCategoryTopics}" /><f:param value="${categoryName}" /></f:message></p>
-	<c:if test="${!empty categoryTopics}">
+	<c:if test="${numCategoryTopics > 0}">
 <table width="100%"><tr><td>
 <ul>
 		<c:set var="columnCount" value="1" />
